--- a/.github/workflows/Ubuntu-arm.yml
+++ b/.github/workflows/Ubuntu-arm.yml
@@ -28,9 +28,10 @@ jobs:
             clang-runtime: '20'
             cling: Off
             cppyy: Off
-            llvm_enable_projects: "clang"
+            llvm_enable_projects: "clang;compiler-rt"
             llvm_targets_to_build: "host;NVPTX"
             coverage: true
+            oop-jit: On
           - name: ubu24-arm-gcc12-clang-repl-20
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -39,6 +40,7 @@ jobs:
             cppyy: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+            oop-jit: Off
           - name: ubu24-arm-gcc12-clang-repl-19-cppyy
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -47,6 +49,7 @@ jobs:
             cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+            oop-jit: Off
           - name: ubu24-arm-gcc12-clang-repl-18-cppyy
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -55,6 +58,7 @@ jobs:
             cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+            oop-jit: Off
           - name: ubu24-arm-gcc12-clang-repl-17-cppyy
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -63,6 +67,7 @@ jobs:
             cppyy: On
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+            oop-jit: Off
           - name: ubu24-arm-gcc12-clang-repl-16
             os: ubuntu-24.04-arm
             compiler: gcc-12
@@ -71,6 +76,7 @@ jobs:
             cppyy: Off
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+            oop-jit: Off
           - name: ubu24-arm-gcc9-clang18-cling-cppyy
             os: ubuntu-24.04-arm
             compiler: gcc-9
@@ -80,6 +86,7 @@ jobs:
             cling-version: '1.2'
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
+            oop-jit: Off
 
     steps:
     - uses: actions/checkout@v4
