--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
             clang-runtime: '20'
             cling: Off
             cppyy: Off
-            llvm_enable_projects: "clang;compiler-rt"
+            llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
             coverage: true
           - name: ubu24-arm-gcc12-clang-repl-20-oop
