--- a/.github/actions/Miscellaneous/Select_Default_Build_Type/action.yml
+++ b/.github/actions/Miscellaneous/Select_Default_Build_Type/action.yml
@@ -10,7 +10,11 @@ runs:
       run: |
         echo "BUILD_TYPE=Release" >> $GITHUB_ENV
         echo "CODE_COVERAGE=0" >> $GITHUB_ENV
-        echo "ncpus=$(sysctl -n hw.ncpu)" >> $GITHUB_ENV
+        if [[ "${{ matrix.os }}" != "macos"* ]]; then
+          echo "ncpus=$(nproc --all)" >> $GITHUB_ENV      
+        else
+          echo "ncpus=$(sysctl -n hw.ncpu)" >> $GITHUB_ENV
+        fi
 
     - name: Select default build type on Windows
       if: runner.os == 'Windows'
