--- a/.github/actions/Build_LLVM/action.yml
+++ b/.github/actions/Build_LLVM/action.yml
@@ -64,11 +64,11 @@ runs:
                 -DLLVM_INCLUDE_TESTS=OFF                        \
                 ../llvm
           ninja clang clangInterpreter clangStaticAnalyzerCore -j ${{ env.ncpus }}
-          cd ./tools/
-          rm -rf $(find . -maxdepth 1 ! -name "clang" ! -name ".")
-          cd ..
-          rm compile_commands.json build.ninja
         fi
+        cd ./tools/
+        rm -rf $(find . -maxdepth 1 ! -name "clang" ! -name ".")
+        cd ..
+        rm compile_commands.json build.ninja
         cd ../
         rm -rf $(find . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
         if [[ "${cling_on}" == "ON" ]]; then
@@ -157,7 +157,9 @@ runs:
                 ..\llvm
           cmake --build . --config Release --target clang clangInterpreter clangStaticAnalyzerCore --parallel ${{ env.ncpus }}
         }
-        cd ..\
+        cd .\tools\
+        rm -r -force $(find.exe . -maxdepth 1 ! -name "clang" ! -name ".")
+        cd ..\..
         rm -r -force $(find.exe . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
         if ( "${{ matrix.cling }}" -imatch "On" )
         {
