--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -127,10 +127,16 @@ if(EMSCRIPTEN)
   set_target_properties(clangCppInterOp
     PROPERTIES NO_SONAME 1
   )
+  target_compile_options(clangCppInterOp
+    PRIVATE "SHELL: -Oz"
+    PRIVATE "SHELL: -flto"
+  )
   target_link_options(clangCppInterOp
     PRIVATE "SHELL: -s WASM_BIGINT"
     PRIVATE "SHELL: -s SIDE_MODULE=1"
     PRIVATE "SHELL: ${SYMBOLS_LIST}"
+    PRIVATE "SHELL: -Oz"
+    PRIVATE "SHELL: -flto"
   )
 else()
   target_link_options(clangCppInterOp
