--- a/.github/actions/Build_and_Test_CppInterOp/action.yml
+++ b/.github/actions/Build_and_Test_CppInterOp/action.yml
@@ -23,6 +23,12 @@ runs:
         export CPPINTEROP_DIR="$CB_PYTHON_DIR/cppyy_backend"
 
         # Build CppInterOp next to cling and llvm-project.
+        if [[ "${{ matrix.oop-jit }}" == "On" ]]; then
+          if [[ -f VERSION ]]; then
+            sed -i.bak 's/1\.8\.0;dev/1.8.1;dev/' VERSION
+            rm -f VERSION.bak
+          fi
+        fi
         mkdir build && cd build
         export CPPINTEROP_BUILD_DIR=$PWD
         cling_on=$(echo "${{ matrix.cling }}" | tr '[:lower:]' '[:upper:]')
