--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,15 +132,15 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # MacOS Arm Jobs
-          - name: osx15-arm-clang-clang-repl-20-oop
-            os: macos-15
-            compiler: clang
-            clang-runtime: '20'
-            cling: Off
-            cppyy: Off
-            llvm_enable_projects: "clang;compiler-rt"
-            llvm_targets_to_build: "host"
-            oop-jit: On
+          # - name: osx15-arm-clang-clang-repl-20-oop
+          #   os: macos-15
+          #   compiler: clang
+          #   clang-runtime: '20'
+          #   cling: Off
+          #   cppyy: Off
+          #   llvm_enable_projects: "clang;compiler-rt"
+          #   llvm_targets_to_build: "host"
+          #   oop-jit: On
           - name: osx15-arm-clang-clang-repl-20
             os: macos-15
             compiler: clang
@@ -292,7 +292,7 @@ jobs:
         path: |
           llvm-project
           ${{ matrix.cling=='On' && 'cling' || '' }}
-        key: ${{ env.CLING_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x-patch-${{ hashFiles(format('patches/llvm/clang{0}-*.patch', matrix.clang-runtime)) || 'none' }}${{ env.OOP_SUFFIX }}
+        key: ${{ env.CLING_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x-patch-${{ hashFiles(format('patches/llvm/clang{0}-*.patch', matrix.clang-runtime)) || 'none' }}
 
     - name: Setup default Build Type
       uses: ./.github/actions/Miscellaneous/Select_Default_Build_Type
