LLVM_BUILT_WITH_OOP_JIT bug fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -314,7 +314,7 @@ add_definitions(${LLVM_DEFINITIONS_LIST})
 string(REGEX REPLACE "/build/lib/cmake/llvm$" "" LLVM_SOURCE_DIR "${LLVM_DIR}")
 add_definitions(-DLLVM_SOURCE_DIR="${LLVM_SOURCE_DIR}")
 
-if(DEFINED LLVM_BUILT_WITH_OOP_JIT)
+if(LLVM_BUILT_WITH_OOP_JIT)
   add_definitions(-DLLVM_BUILT_WITH_OOP_JIT)
 endif()
 
