caching oop jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -255,14 +255,14 @@ jobs:
       with:
         cache-hit: ${{ steps.cache.outputs.cache-hit }}
 
-    # - name: Cache LLVM-${{ matrix.clang-runtime }} and ${{ matrix.cling == 'On' && 'Cling' || 'Clang-REPL' }} build
-    #   uses: actions/cache/save@v4
-    #   if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-    #   with:
-    #     path: |
-    #       llvm-project
-    #       ${{ matrix.cling=='On' && 'cling' || '' }}
-    #     key: ${{ steps.cache.outputs.cache-primary-key }}
+    - name: Cache LLVM-${{ matrix.clang-runtime }} and ${{ matrix.cling == 'On' && 'Cling' || 'Clang-REPL' }} build
+      uses: actions/cache/save@v4
+      if: ${{ steps.cache.outputs.cache-hit != 'true' }}
+      with:
+        path: |
+          llvm-project
+          ${{ matrix.cling=='On' && 'cling' || '' }}
+        key: ${{ steps.cache.outputs.cache-primary-key }}
 
     - name: Setup code coverage
       if: ${{ success() && (matrix.coverage == true) }}
