Remove gmock dependency

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -10,16 +10,16 @@ endif()
 if(EMSCRIPTEN)
   if (TARGET GTest::gtest)
     # Target names in CMake >= v3.23
-    set(gtest_libs GTest::gtest GTest::gmock)
+    set(gtest_libs GTest::gtest)
   else()
-    set(gtest_libs gtest gmock)
+    set(gtest_libs gtest)
   endif()
 else()
   if (TARGET GTest::gtest)
     # Target names in CMake >= v3.23
-    set(gtest_libs GTest::gtest GTest::gmock GTest::gtest_main)
+    set(gtest_libs GTest::gtest GTest::gtest_main)
   else()
-    set(gtest_libs gtest gtest_main gmock)
+    set(gtest_libs gtest gtest_main)
   endif()
   set(link_pthreads_lib pthread)
 endif()
